reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__scheduler.rs_line_721_col_9_001.log

*** crates/tracewake-core/src/scheduler.rs:721:9: replace no_human::build_agent_proposal -> Option<BuiltAgentProposal> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/scheduler.rs
+++ replace no_human::build_agent_proposal -> Option<BuiltAgentProposal> with Some(Default::default())
@@ -713,69 +713,17 @@
     fn build_agent_proposal(
         state: &PhysicalState,
         agent_state: &AgentState,
         log: &EventLog,
         actor_id: &ActorId,
         window: &DayWindow,
         content_manifest_id: &ContentManifestId,
     ) -> Option<BuiltAgentProposal> {
-        let actor = state.actors.get(actor_id)?;
-        let epistemic_projection = epistemic_projection_from_log(log, content_manifest_id);
-        let actor_known_state =
-            NoHumanActorKnownSurfaceBuilder::from_projection(NoHumanActorKnownSurfaceRequest {
-                projection: &epistemic_projection,
-                agent_state,
-                actor_id: actor_id.clone(),
-                current_place_id: actor.current_place_id.clone(),
-                decision_tick: window.start_tick,
-                window_id: &window.window_id,
-                window_end_tick: window.end_tick,
-                current_place_witness_event_id: latest_current_place_perception_event_id(
-                    log,
-                    actor_id,
-                    window.start_tick,
-                    &actor.current_place_id,
-                ),
-                needs_witness_event_id: latest_need_event_id(log, actor_id),
-                frame_event_id: latest_frame_event_id(log),
-            })
-            .build(agent_state)
-            .into_context();
-        let source_event_ids = log
-            .events()
-            .iter()
-            .map(|event| event.event_id.clone())
-            .collect::<std::collections::BTreeSet<_>>();
-        let source_event_kinds = log
-            .events()
-            .iter()
-            .map(|event| (event.event_id.clone(), event.event_type))
-            .collect::<std::collections::BTreeMap<_, _>>();
-        match ActorDecisionTransaction::run(ActorDecisionTransactionInput {
-            actor_id: actor_id.clone(),
-            decision_tick: window.start_tick,
-            agent_state,
-            actor_known_context: &actor_known_state,
-            source_event_ids: Some(&source_event_ids),
-            source_event_kinds: Some(&source_event_kinds),
-            routine_window_family: routine_window_family(
-                agent_state,
-                actor_id,
-                window,
-                &actor_known_state,
-            ),
-            include_idle_fallback: true,
-        }) {
-            ActorDecisionTransactionOutcome::Proposed(proposed) => Some(BuiltAgentProposal {
-                proposal: proposed.proposal.into_proposal(),
-                decision_trace_record: proposed.decision_trace_record,
-            }),
-            ActorDecisionTransactionOutcome::Stuck { .. } => None,
-        }
+        Some(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn epistemic_projection_from_log(
         log: &EventLog,
         content_manifest_id: &ContentManifestId,
     ) -> EpistemicProjection {
         let mut projection = EpistemicProjection::new(content_manifest_id.clone());
         for event in log.events() {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/scheduler.rs` has changed (1781904981.719923211s, 5s after last build at 1781904976.047923157s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `ActorDecisionTransactionInput`, `ActorDecisionTransactionOutcome`, `ActorDecisionTransaction`, `NoHumanActorKnownSurfaceBuilder`, and `NoHumanActorKnownSurfaceRequest`
   --> crates/tracewake-core/src/scheduler.rs:230:42
    |
230 |         record_current_place_perception, ActorDecisionTransaction, ActorDecisionTransactionInput,
    |                                          ^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
231 |         ActorDecisionTransactionOutcome, ActorKnownPlanningContext, BlockerCategory, BlockerCode,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
232 |         DecisionTraceRecord, Intention, IntentionSource, NeedKind, NeedState,
233 |         NoHumanActorKnownSurfaceBuilder, NoHumanActorKnownSurfaceRequest, ResponsibleLayer,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `BuiltAgentProposal: Default` is not satisfied
   --> crates/tracewake-core/src/scheduler.rs:721:14
    |
721 |         Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `BuiltAgentProposal`
   --> crates/tracewake-core/src/scheduler.rs:708:5
    |
708 |     struct BuiltAgentProposal {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
